style: fix tags flex wrap, project card on mobile smaller

--- a/css/styles.css
+++ b/css/styles.css
@@ -376,6 +376,7 @@ header {
 
 .project-display-tags {
   display: flex;
+  flex-wrap: wrap;
   gap: 5px;
 }
 
@@ -664,13 +665,11 @@ footer {
 
   .project-image-div {
     width: 100%;
-    height: 200px;
+    height: 150px;
   }
 
   .project-image {
     width: 100%;
-    height: 100%;
-    /* height: 240px; */
   }
 
   .detail {
